--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,13 +17,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
-    runs-on: ${{ matrix.os }}
+  gradle:
     strategy:
       matrix:
        os: [ ubuntu-latest, windows-latest, macos-latest ]
-
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -31,7 +29,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+    - name: Grant execute permission forGradle
+      run: chmod +x gradlew
+    - name: Build
+      run: ./gradlew build
