--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
     - name: Grant execute permission forGradle
       run: chmod +x gradlew
     - name: Build
