--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
         distribution: 'temurin'
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
-    - name: Grant execute permission forGradle
-      run: chmod +x gradlew
+#    - name: Grant execute permission forGradle
+#      run: chmod +x gradlew
     - name: Build
       run: ./gradlew build
