--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,22 +16,33 @@ on:
 permissions:
   contents: read
 
-jobs:
-  gradle:
-    strategy:
-      matrix:
-       os: [ ubuntu-latest, windows-latest, macos-latest ]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+#jobs:
+#  gradle:
+#    strategy:
+#      matrix:
+#       os: [ ubuntu-latest, windows-latest, macos-latest ]
+#    runs-on: ${{ matrix.os }}
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Set up JDK 11
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '11'
+#        distribution: 'temurin'
+#    - name: Setup Gradle
+#      uses: gradle/gradle-build-action@v2
 #    - name: Grant execute permission forGradle
 #      run: chmod +x gradlew
-    - name: Build
-      run: ./gradlew build
+#    - name: Build
+#      run: ./gradlew build
+
+jobs:
+  build-gradle-project:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout project sources
+        uses: actions/checkout@v2
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Run build with Gradle Wrapper
+        run: ./gradlew build
