--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,5 +44,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+      - name: Grant execute permission forGradle
+        run: chmod +x gradlew
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
