--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,6 +45,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Grant execute permission forGradle
-        run: chmod +x gradlew
+        run: chmod +x gradle wrapper
       - name: Run build with Gradle Wrapper
-        run: ./gradlew build
+        run: ./gradle wrapper build
