--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,14 +37,20 @@ permissions:
 #      run: ./gradlew build
 
 jobs:
-  build-gradle-project:
-    runs-on: ubuntu-latest
+  gradle:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout project sources
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Grant execute permission forGradle
-        run: chmod +x gradle wrapper
-      - name: Run build with Gradle Wrapper
-        run: ./gradle wrapper build
+
+      - name: Execute Gradle build
+        run: ./gradlew build
