--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-
+      - name: Grant execute permission forGradle
+        run: chmod +x gradlew
       - name: Execute Gradle build
         run: ./gradlew build
