--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,17 +41,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        jdk: [8, 11, 17]
+#        jdk: [8, 11, 17]
     runs-on: ${{ matrix.os }}
-    env:
-      JDK_VERSION: ${{ matrix.jdk }}
+#    env:
+#      JDK_VERSION: ${{ matrix.jdk }}
 
     steps:
       - uses: actions/checkout@v3
-#      - uses: actions/setup-java@v3
-#        with:
-#          distribution: temurin
-#          java-version: 11
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
