--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,10 +41,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        jdk: [8, 11, 17]
+#        jdk: [8, 11, 17]
     runs-on: ${{ matrix.os }}
-    env:
-      JDK_VERSION: ${{ matrix.jdk }}
+#    env:
+#      JDK_VERSION: ${{ matrix.jdk }}
 
     steps:
       - uses: actions/checkout@v3
