--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,11 +40,12 @@ jobs:
   gradle:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-#        jdk: [8, 11, 17]
-    runs-on: ${{ matrix.os }}
-#    env:
-#      JDK_VERSION: ${{ matrix.jdk }}
+#        os: [ubuntu-latest, macos-latest, windows-latest]
+        jdk: [8, 11, 17]
+#    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    env:
+      JDK_VERSION: ${{ matrix.jdk }}
 
     steps:
       - uses: actions/checkout@v3
