--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,10 +40,9 @@ jobs:
   gradle:
     strategy:
       matrix:
-#        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         jdk: [8, 11, 17]
-#    runs-on: ${{ matrix.os }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     env:
       JDK_VERSION: ${{ matrix.jdk }}
 
